--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -219,7 +219,7 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
   width: 100%;
   height: 100%;
   border-radius: 7px;
-  background: greenyellow;
+  background: #ffec55a6;
   position: absolute;
   backface-visibility: hidden;
 }
@@ -533,37 +533,264 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
 }
 
 .PageError {
-  display: flex;
-  padding: 60px;
-  margin: 0px;
-  padding: 60px;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  /*   display: flex;
+    padding: 60px;
+    margin: 0px;
+    padding: 60px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; 
+
+
+    h1 {
+        font-family: 'Bungee Shade', cursive;
+        font-size: 150px;
+        margin: 25px;
+    }
+
+    section {
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+        margin: 25px;
+
+        img {
+            width: 120px;
+            height: auto;
+            margin: 10px;
+        }
+
+        p {
+            font-family: 'Indie Flower', cursive;
+            font-family: 'Coming Soon', cursive;
+            font-family: 'Chilanka', cursive;
+            font-size: 22px;
+        }
+    } */
 }
-.PageError h1 {
-  font-family: "Bungee Shade", cursive;
-  font-size: 150px;
-  margin: 25px;
+@media (max-width: 320px) {
+  .PageError {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin: 0;
+  }
+  .PageError img {
+    width: 25%;
+    height: auto;
+    margin: 15px;
+  }
+  .PageError section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 0;
+    width: 60%;
+    height: auto;
+  }
+  .PageError section h1 {
+    font-family: "Bungee Shade", cursive;
+    font-size: 50px;
+    margin: 5px auto 5px auto;
+  }
+  .PageError section p {
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 12px;
+    margin: 10px;
+  }
 }
-.PageError section {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 25px;
+@media (min-width: 320px) and (max-width: 480px) {
+  .PageError {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    margin: 0;
+  }
+  .PageError img {
+    width: 30%;
+    height: auto;
+    margin: 16px;
+  }
+  .PageError section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    margin: 0;
+    width: 65%;
+    height: auto;
+  }
+  .PageError section h1 {
+    font-family: "Bungee Shade", cursive;
+    font-size: 65px;
+    margin: 8px auto 8px auto;
+  }
+  .PageError section p {
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 14px;
+    margin: 12px;
+  }
 }
-.PageError section img {
-  width: 120px;
-  height: auto;
-  margin: 10px;
+@media (min-width: 480px) and (max-width: 768px) {
+  .PageError {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 35px;
+    margin: 0;
+  }
+  .PageError img {
+    width: 40%;
+    height: auto;
+    margin: 17px;
+  }
+  .PageError section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 14px;
+    margin: 0;
+    width: 70%;
+    height: auto;
+  }
+  .PageError section h1 {
+    font-family: "Bungee Shade", cursive;
+    font-size: 80px;
+    margin: 11px auto 11px auto;
+  }
+  .PageError section p {
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 16px;
+    margin: 14px;
+  }
 }
-.PageError section p {
-  font-family: "Indie Flower", cursive;
-  font-family: "Coming Soon", cursive;
-  font-family: "Chilanka", cursive;
-  font-size: 22px;
+@media (min-width: 768px) and (max-width: 1024px) {
+  .PageError {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    margin: 0;
+  }
+  .PageError img {
+    width: 37%;
+    height: auto;
+    margin: 18px;
+  }
+  .PageError section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    margin: 0;
+    width: 40%;
+    height: auto;
+  }
+  .PageError section h1 {
+    font-family: "Bungee Shade", cursive;
+    font-size: 95px;
+    margin: 14px auto 14px auto;
+  }
+  .PageError section p {
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 18px;
+    margin: 16px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1200px) {
+  .PageError {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 45px;
+    margin: 0;
+  }
+  .PageError img {
+    width: 34%;
+    height: auto;
+    margin: 19px;
+  }
+  .PageError section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 18px;
+    margin: 0;
+    width: 40%;
+    height: auto;
+  }
+  .PageError section h1 {
+    font-family: "Bungee Shade", cursive;
+    font-size: 110px;
+    margin: 17px auto 17px auto;
+  }
+  .PageError section p {
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 20px;
+    margin: 18px;
+  }
+}
+@media (min-width: 1200px) {
+  .PageError {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    margin: 0;
+  }
+  .PageError img {
+    width: 31%;
+    height: auto;
+    margin: 20px;
+  }
+  .PageError section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin: 0;
+    width: 40%;
+    height: auto;
+  }
+  .PageError section h1 {
+    font-family: "Bungee Shade", cursive;
+    font-size: 125px;
+    margin: 20px auto 20px auto;
+  }
+  .PageError section p {
+    font-family: "Indie Flower", cursive;
+    font-family: "Coming Soon", cursive;
+    font-family: "Chilanka", cursive;
+    font-size: 22px;
+    margin: 20px;
+  }
 }
 
 @media (max-width: 320px) {
