--- a/src/sass/_gamecards.scss
+++ b/src/sass/_gamecards.scss
@@ -56,7 +56,7 @@
                 width: 100%;
                 height: 100%;
                 border-radius: 7px;
-                background: greenyellow;
+                background: #ffec55a6;
                 position: absolute;
                 backface-visibility: hidden;
 
