--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@ header {
   justify-content: space-between;
   align-items: center;
 }
-header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
+header a {
   outline: none;
 }
 @media (max-width: 320px) {
@@ -18,7 +18,7 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
     height: 45px;
     margin-left: 20px;
   }
-  header button {
+  header button[type=button] {
     width: 90%;
     height: 40px;
     background: #fdd44d;
@@ -44,7 +44,7 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
     height: 47px;
     margin-left: 22px;
   }
-  header button {
+  header button[type=button] {
     width: 93%;
     height: 42px;
     background: #fdd44d;
@@ -70,7 +70,7 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
     height: 49px;
     margin-left: 24px;
   }
-  header button {
+  header button[type=button] {
     width: 96%;
     height: 44px;
     background: #fdd44d;
@@ -96,7 +96,7 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
     height: 51px;
     margin-left: 26px;
   }
-  header button {
+  header button[type=button] {
     width: 99%;
     height: 46px;
     background: #fdd44d;
@@ -122,7 +122,7 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
     height: 53px;
     margin-left: 28px;
   }
-  header button {
+  header button[type=button] {
     width: 100%;
     height: 48px;
     background: #fdd44d;
@@ -148,7 +148,7 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
     height: 55px;
     margin-left: 30px;
   }
-  header button {
+  header button[type=button] {
     width: 100%;
     height: 50px;
     background: #fdd44d;
@@ -169,23 +169,40 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
   display: flex;
   padding: 15px;
   margin: 0;
+  /*    @media (max-width: $blackberry) {
+         @include style(5px 6% 5px 6%, 11px);
+     }
+     @media (min-width: $blackberry) and (max-width: $smartphone) {
+         @include style(6px 8% 6px 8%, 12px);
+     }
+     @media (min-width: $smartphone) and (max-width: $tablet) {
+         @include style(7px 10% 7px 10%, 13px);
+     }
+     @media (min-width: $tablet) and (max-width: $desktop) {
+         @include style(8px 12% 8px 12%, 14px);
+     }
+     @media (min-width: $desktop) and (max-width: $smart) {
+         @include style(9px 14% 9px 14%, 15px);
+     }
+     @media (min-width: $smart) {
+         @include style(10px 16% 10px 16%, 16px);
+     } */
 }
 .Game section {
   width: 60%;
-  display: grid;
   margin: 35px auto 35px auto;
+  display: grid;
   grid-template-columns: repeat(4, minmax(100px, 1fr));
   justify-items: center;
   perspective: 1000px;
 }
 .Game section article {
+  /* display: flex; */
   width: 90%;
   height: 120px;
-  cursor: pointer;
-  display: flex;
   margin: 5px;
+  cursor: pointer;
   border-radius: 12px;
-  border: 6px solid #f9af00b3;
   position: relative;
   transform: scale(1);
   transform-style: preserve-3d;
@@ -209,24 +226,23 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
   position: absolute;
   backface-visibility: hidden;
   transform: rotateY(180deg);
+  border: 6px solid #f9af00b3;
 }
 .Game section article .front-face img {
   width: 100%;
   height: 100%;
-  border-radius: 7px;
+  border-radius: 3px;
 }
 .Game section article .back-face {
   width: 100%;
   height: 100%;
   border-radius: 7px;
   background: #ffec55a6;
-  position: absolute;
-  backface-visibility: hidden;
+  border: 6px solid #f9af00b3;
 }
 .Game section article .back-face img {
   width: 100%;
   height: 100%;
-  border-radius: 7px;
 }
 .Game section .flip {
   transform: rotateY(180deg);
@@ -532,44 +548,6 @@ header a[href="/"], header a[href="/gamecards"], header a[href="/gamerules"] {
   }
 }
 
-.PageError {
-  /*   display: flex;
-    padding: 60px;
-    margin: 0px;
-    padding: 60px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center; 
-
-
-    h1 {
-        font-family: 'Bungee Shade', cursive;
-        font-size: 150px;
-        margin: 25px;
-    }
-
-    section {
-        width: 30%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center; 
-        margin: 25px;
-
-        img {
-            width: 120px;
-            height: auto;
-            margin: 10px;
-        }
-
-        p {
-            font-family: 'Indie Flower', cursive;
-            font-family: 'Coming Soon', cursive;
-            font-family: 'Chilanka', cursive;
-            font-size: 22px;
-        }
-    } */
-}
 @media (max-width: 320px) {
   .PageError {
     display: flex;
