--- a/src/sass/_gamecards.scss
+++ b/src/sass/_gamecards.scss
@@ -167,6 +167,10 @@
         .flip {
             transform: rotateY(180deg);
         }
+
+        .hidden {
+            visibility: hidden;
+        }
     }
 
  /*    @media (max-width: $blackberry) {
